Setup modlib module